force-app/main/default/objects/Activity/fields/Approval_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request_Id__c</fullName>
    <label>Approval Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>