force-app/main/default/objects/Activity/fields/Approval_SR__c.field-meta.xml
<CustomField>
    <fullName>Approval_SR__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Approval_Request_Id__c,
SR_Name__c,
&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related To Approval Req</label>
    <type>Text</type>
</CustomField>