force-app/main/default/objects/Activity/fields/Calendar_view__c.field-meta.xml
<CustomField>
    <fullName>Calendar_view__c</fullName>
    <formula>Subject +&apos; | &apos; +   Opportunity_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Calendar View</label>
    <type>Text</type>
</CustomField>