force-app/main/default/objects/Activity/fields/Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value__c</fullName>
    <inlineHelpText>What is the estimated value of this task?</inlineHelpText>
    <label>Estimated Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>