force-app/main/default/objects/Activity/fields/OpportunityNumber__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNumber__c</fullName>
    <label>Opportunity Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>