force-app/main/default/objects/Activity/fields/SR_Name__c.field-meta.xml
<CustomField>
    <fullName>SR_Name__c</fullName>
    <label>Submit Request Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>